# GCOPTER

gcopter/: CMakeLists.txt  package.xml
gcopter/config/: global_planning.yaml
gcopter/include/gcopter/: gcopter.hpp
gcopter/src/: global_planning.cpp
gcopter/srv/: getTraj.srv
